# SCNUCC

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeLists.txt.back  CMakeSettings.json  LICENSE  README.md  test_asm.sh
backend/: CMakeLists.txt.back  compiler.cpp
backend/include/: AsmBlock.h  AsmGenerator.h  AsmInstruction.h  LiveAnalyzer.h  Location.h  RegisterAllocater.h  RegisterManager.h  backend_util.h  riscv.h
backend/src/: AsmBlock.cpp  AsmGenerator.cpp  AsmInstruction.cpp  LiveAnalyzer.cpp  Location.cpp  RegisterAllocator.cpp  RegisterManager.cpp  backend_util.cpp  riscv.cpp
cmake/: utils.cmake
dependencies/antlr4-runtime/: ParserRuleContext.h
frontend/: CMakeLists.txt.back  gen_ir.cpp
frontend/include/: Block.h  ControlFlowGraph.h  IRStatement.h  IRVariable.h  LLVMIR.h  MyVisitor.h  SymbolTable.h  SysYLexer.h  SysYParser.h  SysYParserBaseListener.h  SysYParserBaseVisitor.h  SysYParserListener.h  SysYParserVisitor.h  Util.h
frontend/src/: Block.cpp  ControlFlowGraph.cpp  ExpVisitor.cpp  IRStatement.cpp  IRVariable.cpp  MyVisitor.cpp  PrivateVisitor.cpp  SymbolTable.cpp  SysYLexer.cpp  SysYLexer.interp  SysYParser.cpp  SysYParser.interp  SysYParser.tokens  SysYParserBaseListener.cpp  SysYParserBaseVisitor.cpp  Util.cpp  (+2 more)
sysY2022/: only_main_with_if.c  simple_gbl_const_stmts.c  simple_gbl_stmts  simple_gbl_stmts.c  simple_gbl_stmts.c.out
test-script/: build_sysY2022_with_clang.py  check_log.py  compair_output.py  compile_asm_with_riscv64.py  compile_llvm_ir_with_llvm.py  generate_asm.py  generate_llvm_ir_with_SCNUcc.py  test_frontend.py
(+6 files in other folders)
